[gd_scene load_steps=10 format=2]

[ext_resource path="res://units/platform/platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://units/platform/Plank_03.png" type="Texture" id=2]
[ext_resource path="res://city.gd" type="Script" id=3]
[ext_resource path="res://background/sky.png" type="Texture" id=4]
[ext_resource path="res://skyhigh.gd" type="Script" id=5]
[ext_resource path="res://units/build_platform/build_platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://game_gui/gui.tscn" type="PackedScene" id=7]
[ext_resource path="res://units/section/section.tscn" type="PackedScene" id=8]
[ext_resource path="res://background/Clouds_01_192x128_Set_02_06.png" type="Texture" id=9]

[node name="SkyHigh" type="Node"]
script = ExtResource( 5 )
starting_height = 1000

[node name="City" type="KinematicBody2D" parent="."]
position = Vector2( 0, -600 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="City"]
position = Vector2( 0, 1 )
current = true
zoom = Vector2( 2, 2 )

[node name="Platform" parent="City" instance=ExtResource( 1 )]
position = Vector2( 0.568817, -0.568787 )

[node name="Section1" parent="City/Platform" instance=ExtResource( 8 )]
position = Vector2( -70, -32 )

[node name="Section2" parent="City/Platform" instance=ExtResource( 8 )]
position = Vector2( 70, -32 )

[node name="build_platform" parent="City" instance=ExtResource( 6 )]
show_behind_parent = true
position = Vector2( 286, 0 )
offset_x = 1

[node name="build_platform2" parent="City" instance=ExtResource( 6 )]
show_behind_parent = true
position = Vector2( -286, 0 )
offset_x = -1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 581.214, -304.351 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 1224 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background"]
texture = ExtResource( 4 )
__meta__ = {
"_edit_bone_": true
}

[node name="Clouds1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 600 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Clouds1"]
position = Vector2( -908.226, 168.762 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Clouds1"]
position = Vector2( 297.967, 106.785 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Clouds1"]
position = Vector2( 666.196, 271.859 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Clouds1"]
position = Vector2( -405.575, 314.294 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground/Clouds1"]
position = Vector2( 329.068, 451.203 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
[connection signal="city_move" from="City" to="CanvasLayer/GUI" method="_on_City_city_move"]
[connection signal="hit_ground" from="City" to="." method="_on_City_hit_ground"]
[connection signal="built_platform" from="City/build_platform" to="City" method="_on_build_platform_built_platform"]
[connection signal="built_platform" from="City/build_platform2" to="City" method="_on_build_platform_built_platform"]
